// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextComponent > renders text with correct font size and weight for variant 'body' 1`] = `
<body>
  <div>
    <div
      class=" text-base font-normal"
      data-testid="text"
    >
      Test body
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'h1' 1`] = `
<body>
  <div>
    <div
      class=" text-4xl font-bold"
      data-testid="text"
    >
      Test h1
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'h2' 1`] = `
<body>
  <div>
    <div
      class=" text-3xl font-bold"
      data-testid="text"
    >
      Test h2
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'h3' 1`] = `
<body>
  <div>
    <div
      class=" text-2xl font-bold"
      data-testid="text"
    >
      Test h3
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'h4' 1`] = `
<body>
  <div>
    <div
      class=" text-xl font-bold"
      data-testid="text"
    >
      Test h4
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'h5' 1`] = `
<body>
  <div>
    <div
      class=" text-lg font-bold"
      data-testid="text"
    >
      Test h5
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'h6' 1`] = `
<body>
  <div>
    <div
      class=" text-base font-semibold"
      data-testid="text"
    >
      Test h6
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'nav' 1`] = `
<body>
  <div>
    <div
      class=" text-sm font-semibold"
      data-testid="text"
    >
      Test nav
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'small' 1`] = `
<body>
  <div>
    <div
      class=" text-sm font-normal"
      data-testid="text"
    >
      Test small
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;

exports[`TextComponent > renders text with correct font size and weight for variant 'tiny' 1`] = `
<body>
  <div>
    <div
      class=" text-xs font-normal"
      data-testid="text"
    >
      Test tiny
    </div>
    <!--&lt;Text&gt;-->
  </div>
</body>
`;
